ManifoldCF Change Log
$Id$

======================= Release 2.8.1 =====================

CONNECTORS-1451: Tika extractor was causing some out-of-memory
events to occur for simple crawls, so I increased the default memory
allocated in the examples to 512M.
(Karl Wright)

CONNECTORS-1450: Tika extractor cannot process MS Office files due
to a dependency problem.  The dependency issue is that poi-ooxml-schemas
is apparently accessed via reflection, and the class lookup does not
apparently use the current classloader, but rather some other classloader.
This requires the entire poi* set of jars, and all dependencies, to be
included in ManifoldCF's core jar list.
(Karl Wright)

======================= Release 2.8 =====================

CONNECTORS-1445: Fix timezone handling in reports to use browser timezone
and add a timezone field for the editjob schedule page as well. 
(Kishore Kumar, Karl Wright)

CONNECTORS-1447: Update postgresql driver to the most current version.
This should allow error free operation with Postgresql versions back to
version 8.
(Karl Wright)

CONNECTORS-1446: Confluence connector's UI was broken; protocol
selection was not working.
(Ty Taylor, Karl Wright)

CONNECTORS-1444: Documentum connector needs the ability to skip
corrupted files.
(Tamizh Kumaran Thamizharasan, Karl Wright)

CONNECTORS-1440: Add support for created date in File System connector.
(Steph van Schalkwyk, Karl Wright)

CONNECTORS-1438: Wrong content-type parse in Solr connector caused
failure when content type contained a charset.
(Kenta Kasahara, Karl Wright)

CONNECTORS-1434: Escape filenames in Solr Http headers to match spec.
This is a workaround for a fix that really should be in HttpClient.
(Karl Wright, Tamizh Kumaran Thamizharasan)

CONNECTORS-1433: Add pipeline specification to ES connector.
(Steph van Schalkwyk, Karl Wright)

CONNECTORS-1432: Fix deleting stale check methods from window object
(Steph van Schalkwyk, Karl Wright, Kishore Kumar)
